<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.Admin_Login"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:title="Admin Login"
        app:titleTextColor="#fff">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/admin_pic"
        android:layout_marginTop="10dp"/>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center"
    android:layout_marginTop="40dp"
    android:background="@drawable/round_edittext">
    
    <ImageView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_black_24dp"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/white"
        android:background="@android:color/transparent"
        android:inputType="textPersonName" />
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_edittext">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock_black_24dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@android:color/transparent"
        android:autofillHints=""
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnALogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:onClick="btnLogin_click"
        android:textColor="@android:color/white"
        android:background="@drawable/round_button"
        android:text="@string/login" />
</LinearLayout>